--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,7 @@ projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
-#Wed, 29 Apr 2015 16:03:24 +0300
 version=2.4.5-beta-SNAPSHOT
+fortressVersion=0.4.21-beta-161025
+testbaseVersion=0.0.15-alpha-160826
+jsoftfloatVersion=1.0.3-beta-161205
