--- a/build.gradle
+++ b/build.gradle
@@ -148,9 +148,9 @@ dependencies {
   compile 'org.codehaus.woodstox:wstx-asl:3.2.4'
   compile 'org.apache.velocity:velocity:1.7'
 
-  compile ('fortress:fortress:0.4.21-beta-161025') { changing = true }
-  compile ('testbase:testbase:0.0.15-alpha-160826') { changing = true }
-  compile ('jsoftfloat:jsoftfloat:1.0.3-beta-161205') { changing = true }
+  compile ("fortress:fortress:${fortressVersion}") { changing = true }
+  compile ("testbase:testbase:${testbaseVersion}") { changing = true }
+  compile ("jsoftfloat:jsoftfloat:${jsoftfloatVersion}") { changing = true }
   compile ('coverage:coverage:+') { changing = true }
   compile ('aspectrace:aspectrace:+') { changing = true }
 
