--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.6-beta-SNAPSHOT
 fortressVersion=0.4.21-beta-161025
 testbaseVersion=0.0.15-alpha-160826
-jsoftfloatVersion=1.0.4-beta-161209
+jsoftfloatVersion=1.0.5-beta-SNAPSHOT
