--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
-version=2.4.6-beta-SNAPSHOT
+version=2.4.6-beta-161221
 fortressVersion=0.4.21-beta-161025
 testbaseVersion=0.0.15-alpha-160826
 jsoftfloatVersion=1.0.5-beta-161221
