build.gradle - JavaVersion 1.7

--- a/build.gradle
+++ b/build.gradle
@@ -289,7 +289,9 @@ task getDependencies(type: Copy) {
 }
 
 compileJava {
-  options.encoding = "UTF-8"
+  options.encoding = 'UTF-8'
+  sourceCompatibility = '1.7'
+  targetCompatibility = '1.7'
 }
 
 generateGrammarSource {
