[Gradle Release Plugin] - new version commit:  '2.4.15-beta-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
-version=2.4.14-beta-170306
+version=2.4.15-beta-SNAPSHOT
 fortressVersion=0.4.21-beta-161025
 testbaseVersion=0.0.15-alpha-160826
 jsoftfloatVersion=1.0.5-beta-161221
