[Gradle Release Plugin] - pre tag commit:  '2.4.15-beta-170317'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
-version=2.4.15-beta-SNAPSHOT
+version=2.4.15-beta-170317
 fortressVersion=0.4.22-beta-170316
 testbaseVersion=0.0.15-alpha-160826
 jsoftfloatVersion=1.0.5-beta-161221
