--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
-version=2.4.18-beta-SNAPSHOT
+version=2.4.18-beta-170414
 fortressVersion=0.4.23-beta-170324
 testbaseVersion=0.0.15-alpha-160826
 jsoftfloatVersion=1.0.5-beta-161221
