--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2016 ISP RAS (http://www.ispras.ru)
+ * Copyright 2015-2017 ISP RAS (http://www.ispras.ru)
  * 
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
@@ -146,15 +146,17 @@ dependencies {
   compile 'commons-cli:commons-cli:1.2'
   compile 'org.jruby:jruby-complete:1.7.25'
   jruby 'org.jruby:jruby-complete:1.7.25'
-  compile 'org.codehaus.woodstox:wstx-asl:3.2.4'
-  compile 'org.apache.velocity:velocity:1.7'
   compile 'sat4j:org.sat4j.core:v20130525'
+  compile 'org.apache.velocity:velocity:1.7'
 
   compile ("fortress:fortress:${fortressVersion}") { changing = true }
   compile ("testbase:testbase:${testbaseVersion}") { changing = true }
   compile ("jsoftfloat:jsoftfloat:${jsoftfloatVersion}") { changing = true }
-  compile ('coverage:coverage:+') { changing = true }
-  compile ('aspectrace:aspectrace:+') { changing = true }
+
+  // TODO: unused Aspectrace dependencies
+  // compile 'org.codehaus.woodstox:wstx-asl:3.2.4'
+  // compile ('coverage:coverage:+') { changing = true }
+  // compile ('aspectrace:aspectrace:+') { changing = true }
 
   checkstyle 'com.puppycrawl.tools:checkstyle:6.12.1'
   pmd 'net.sourceforge.pmd:pmd-core:5.4.0'
