--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
-version=2.4.22-beta-170512
+version=2.4.23-beta-SNAPSHOT
 fortressVersion=0.4.24-beta-170511
 testbaseVersion=0.0.16-alpha-170511
 jsoftfloatVersion=1.0.5-beta-161221
