--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.25-beta-SNAPSHOT
 fortressVersion=0.4.24-beta-170511
-testbaseVersion=0.0.17-alpha-SNAPSHOT
+testbaseVersion=0.0.17-alpha-170605
 jsoftfloatVersion=1.0.5-beta-161221
