MicroTESK Testing Guide reformatting.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/xdocs/user-guide/core/spec/Makefile
+++ b/xdocs/user-guide/core/spec/Makefile
@@ -1,4 +1,4 @@
-MAIN    = MicroTESK.SpecificationGuide.tex
+MAIN    = MicroTESK.SpecGuide.tex
 SOURCE  = $(MAIN) intro.tex language.tex appendix.tex biblio.tex
 INCLUDE = memfonts.sty memlays.sty memsty.sty titlepages.sty memnoidxnum.tex trims-example.tex
 
