--- a/xdocs/user-guide/core/test/Makefile
+++ b/xdocs/user-guide/core/test/Makefile
@@ -1,6 +1,6 @@
 MAIN    = MicroTESK.TestGuide.tex
 SOURCE  = $(MAIN) overview.tex utils.tex sequence.tex data.tex engines.tex memconfig.tex biblio.tex
-INCLUDE = memfonts.sty memlays.sty memsty.sty titlepages.sty memnoidxnum.tex trims-example.tex
+INCLUDE = memfonts.sty memlays.sty memsty.sty titlepages.sty memnoidxnum.tex
 
 SRC_DIR = src
 INC_DIR = ../../../include/memoir/doc-src/
