--- a/build.gradle
+++ b/build.gradle
@@ -437,7 +437,9 @@ task translateMiniMips(type: JavaExec) {
     'src/main/arch/demo/minimips/model/minimips.nml',
     'src/main/arch/demo/minimips/model/mmu/minimips.mmu',
     '-od',
-    'build/generated-src/models'
+    'build/generated-src/models',
+    '-ed',
+    'src/main/arch/demo/minimips/extensions'
   ]
 }
 
