--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ projectGroup=microtesk
 projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.38-beta-SNAPSHOT
-fortressVersion=0.4.27-beta-170817
+fortressVersion=0.4.28-beta-SNAPSHOT
 testbaseVersion=0.0.17-alpha-170605
 jsoftfloatVersion=1.0.5-beta-161221
