--- a/build.gradle
+++ b/build.gradle
@@ -435,7 +435,8 @@ task translateMiniMips(type: JavaExec) {
   args = [
     '-t',
     'src/main/arch/demo/minimips/model/minimips.nml',
-    'src/main/arch/demo/minimips/model/mmu/minimips.mmu',
+//  MMU is temporary disabled.
+//    'src/main/arch/demo/minimips/model/mmu/minimips.mmu',
     '-od',
     'build/generated-src/models',
     '-ed',
