--- a/build.gradle
+++ b/build.gradle
@@ -435,8 +435,7 @@ task translateMiniMips(type: JavaExec) {
   args = [
     '-t',
     'src/main/arch/demo/minimips/model/minimips.nml',
-//  MMU is temporary disabled.
-//    'src/main/arch/demo/minimips/model/mmu/minimips.mmu',
+    'src/main/arch/demo/minimips/model/mmu/minimips.mmu',
     '-od',
     'build/generated-src/models',
     '-ed',
