--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 /*
  * Copyright 2015-2017 ISP RAS (http://www.ispras.ru)
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software distributed under the License
  * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  * or implied. See the License for the specific language governing permissions and limitations under
@@ -14,6 +14,10 @@
 
 import java.text.SimpleDateFormat
 import java.util.regex.Matcher
+
+def repoUrlStr = 'http://forge.ispras.ru:8082/nexus/content/repositories/'
+def repoUserStr = hasProperty('repoUser') ? repoUser : "$System.env._REPO_USER"
+def repoPasswordStr = hasProperty('repoPassword') ? repoPassword : "$System.env._REPO_PASSWORD"
 
 buildscript {
   repositories {
@@ -52,9 +56,25 @@ apply plugin: 'eclipse'
 repositories {
   maven {
     url 'http://forge.ispras.ru:8082/nexus/content/repositories/releases'
+
+    credentials {
+      username repoUserStr
+      password repoPasswordStr
+    }
+    authentication {
+      basic(BasicAuthentication)
+    }
   }
   maven {
     url 'http://forge.ispras.ru:8082/nexus/content/repositories/snapshots'
+
+    credentials {
+      username repoUserStr
+      password repoPasswordStr
+    }
+    authentication {
+      basic(BasicAuthentication)
+    }
   }
   ivy {
     url = 'http://forge.ispras.ru/repo'
@@ -583,10 +603,6 @@ distributions {
     }
   }
 }
-
-def repoUrlStr = 'http://forge.ispras.ru:8082/nexus/content/repositories/'
-def repoUserStr = hasProperty('repoUser') ? repoUser : "$System.env._REPO_USER"
-def repoPasswordStr = hasProperty('repoPassword') ? repoPassword : "$System.env._REPO_PASSWORD"
 
 publishing {
   publications {
