--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ projectName=microtesk
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.38-beta-SNAPSHOT
 fortressVersion=0.4.28-beta-SNAPSHOT
-testbaseVersion=0.0.17-alpha-170605
+testbaseVersion=0.0.18-alpha-SNAPSHOT
 jsoftfloatVersion=1.0.5-beta-161221
