repositry address changed and moved to gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 projectTitle=MicroTESK
 projectGroup=microtesk
 projectName=microtesk
+repoUrl=https://forge.ispras.ru/nexus/content/repositories/
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.38-beta-SNAPSHOT
 fortressVersion=0.4.28-beta-SNAPSHOT
