--- a/build.gradle
+++ b/build.gradle
@@ -49,13 +49,13 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'eclipse'
 
-def repoUrlStr = 'http://forge.ispras.ru:8082/nexus/content/repositories/'
+def repoUrlStr = repoUrl
 def repoUserStr = hasProperty('repoUser') ? repoUser : "$System.env._REPO_USER"
 def repoPasswordStr = hasProperty('repoPassword') ? repoPassword : "$System.env._REPO_PASSWORD"
 
 repositories {
   maven {
-    url 'http://forge.ispras.ru:8082/nexus/content/repositories/releases'
+    url repoUrlStr + 'releases'
 
     credentials {
       username repoUserStr
@@ -66,7 +66,7 @@ repositories {
     }
   }
   maven {
-    url 'http://forge.ispras.ru:8082/nexus/content/repositories/snapshots'
+    url repoUrlStr + 'snapshots'
 
     credentials {
       username repoUserStr
