User guide: test engine composition.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/xdocs/user-guide/core/test/Makefile
+++ b/xdocs/user-guide/core/test/Makefile
@@ -5,7 +5,8 @@ SOURCE  = $(MAIN) \
           utils.tex \
           sequence.tex \
           data.tex \
-          branch.tex \
+          engine_composition.tex \
+          engine_branch.tex \
           memconfig.tex \
           biblio.tex
 
