--- a/build.gradle
+++ b/build.gradle
@@ -320,17 +320,15 @@ generateGrammarSource {
   arguments += ["-lib", "src/main/antlrlib/ru/ispras/microtesk/translator/nml/grammar"]
 }
 
-checkstyle (type: Checkstyle) {
+checkstyle {
   toolVersion = 6.5
   ignoreFailures = true
   showViolations = false
   configFile=file("${project.projectDir}/config/checkstyle/google_checks.xml")
 }
 
-tasks.withType(Checkstyle) {
-    exclude '**/ru/ispras/microtesk/translator/nml/grammar**'
-	exclude '**/ru/ispras/microtesk/mmu/translator/grammar**'
-}
+checkstyleMain.exclude '**/ru/ispras/microtesk/translator/nml/grammar**'
+checkstyleMain.exclude '**/ru/ispras/microtesk/mmu/translator/grammar**'
 
 findbugs {
   ignoreFailures = true
