--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2017 ISP RAS (http://www.ispras.ru)
+ * Copyright 2015-2018 ISP RAS (http://www.ispras.ru)
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
@@ -421,7 +421,7 @@ task copyEtc(type: Copy) {
   into "${project.projectDir}/build/target/etc"
 }
 
-task translateCpuDemo(type: JavaExec) {
+task translateCpu(type: JavaExec) {
   classpath = files('build/libs/microtesk.jar')
   classpath += sourceSets.main.runtimeClasspath
   environment 'MICROTESK_HOME', "${project.projectDir}/build/target"
@@ -434,9 +434,9 @@ task translateCpuDemo(type: JavaExec) {
   ]
 }
 
-translateCpuDemo.dependsOn copyEtc
+translateCpu.dependsOn copyEtc
 
-task translateVliwDemo(type: JavaExec) {
+task translateVliw(type: JavaExec) {
   classpath = files('build/libs/microtesk.jar')
   classpath += sourceSets.main.runtimeClasspath
   environment 'MICROTESK_HOME', "${project.projectDir}/build/target"
@@ -449,9 +449,25 @@ task translateVliwDemo(type: JavaExec) {
   ]
 }
 
-translateVliwDemo.dependsOn copyEtc
+translateVliw.dependsOn copyEtc
 
-task translateMiniMips(type: JavaExec) {
+task translateVmem(type: JavaExec) {
+  classpath = files('build/libs/microtesk.jar')
+  classpath += sourceSets.main.runtimeClasspath
+  environment 'MICROTESK_HOME', "${project.projectDir}/build/target"
+  main = mainClassName
+  args = [
+    '-t',
+    'src/main/arch/demo/vmem/model/vmem.nml',
+    'src/main/arch/demo/vmem/model/vmem.mmu',
+    '-od',
+    'build/generated-src/models'
+  ]
+}
+
+translateVmem.dependsOn copyEtc
+
+task translateMinimips(type: JavaExec) {
   classpath = files('build/libs/microtesk.jar')
   classpath += sourceSets.main.runtimeClasspath
   environment 'MICROTESK_HOME', "${project.projectDir}/build/target"
@@ -467,7 +483,7 @@ task translateMiniMips(type: JavaExec) {
   ]
 }
 
-translateMiniMips.dependsOn copyEtc
+translateMinimips.dependsOn copyEtc
 
 task translateX86(type: JavaExec) {
   classpath = files('build/libs/microtesk.jar')
@@ -536,9 +552,10 @@ copyFilesForRDoc.dependsOn cleanFilesForRDoc
 
 distTar.dependsOn jarModels
 jarModels.dependsOn compileModels
-compileModels.dependsOn translateCpuDemo
-compileModels.dependsOn translateVliwDemo
-compileModels.dependsOn translateMiniMips
+compileModels.dependsOn translateCpu
+compileModels.dependsOn translateVliw
+compileModels.dependsOn translateVmem
+compileModels.dependsOn translateMinimips
 compileModels.dependsOn translateX86
 
 tasks.withType(Tar) {
