--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ repoUrl=https://forge.ispras.ru/nexus/content/repositories/
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.38-beta-SNAPSHOT
 fortressVersion=0.4.29-beta-180202
-testbaseVersion=0.0.18-alpha-SNAPSHOT
+testbaseVersion=0.0.18-alpha-180202
 jsoftfloatVersion=1.0.5-beta-161221
