--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,6 @@ projectName=microtesk
 repoUrl=https://forge.ispras.ru/nexus/content/repositories/
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.39-beta-SNAPSHOT
-fortressVersion=0.4.29-beta-180202
-testbaseVersion=0.0.18-alpha-180202
+fortressVersion=0.4.30-beta-SNAPSHOT
+testbaseVersion=0.0.19-alpha-SNAPSHOT
 jsoftfloatVersion=1.0.5-beta-161221
