New miniMIPS example: testdata.rb + corresponding JUnit test.
Signed-off-by: Andrei Tatarnikov <andrewt@ispras.ru>

--- a/src/main/arch/demo/minimips/templates/Makefile
+++ b/src/main/arch/demo/minimips/templates/Makefile
@@ -47,7 +47,8 @@ TESTS = aligned_calls\
         random_sequence\
         random_situation\
         register_allocation\
-        selfchecks
+        selfchecks\
+        testdata
 
 all: $(TESTS)
 
