build.gradle: coping Python files to build
Signed-off-by: Andrei Tatarnikov <andrewt@ispras.ru>

--- a/build.gradle
+++ b/build.gradle
@@ -632,6 +632,10 @@ distributions {
         into('lib/ruby')
       }
 
+      from('src/main/python') {
+        into('lib/python')
+      }
+
       from("${project.projectDir}/build/target/lib/why3") {
         into('lib/why3')
       }
