[microft] add Microft dependency
Signed-off-by: Artem Kotsynyak <kotsynyak@ispras.ru>

--- a/build.gradle
+++ b/build.gradle
@@ -175,6 +175,7 @@ dependencies {
   compile ("fortress:fortress:${fortressVersion}") { changing = true }
   compile ("testbase:testbase:${testbaseVersion}") { changing = true }
   compile ("jsoftfloat:jsoftfloat:${jsoftfloatVersion}") { changing = true }
+  compile ("microft:microft:+") { changing = true }
 
   // TODO: unused Aspectrace dependencies
   // compile 'org.codehaus.woodstox:wstx-asl:3.2.4'
