--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ version=2.4.41-beta-SNAPSHOT
 fortressVersion=0.4.31-beta-180504
 testbaseVersion=0.0.20-alpha-180504
 jsoftfloatVersion=1.0.5-beta-161221
+qemuVersion=0.2.2-beta-SNAPSHOT
