AllocatorEngine: manual register reservation.
Signed-off-by: Andrei Tatarnikov <andrewt@ispras.ru>

--- a/build.gradle
+++ b/build.gradle
@@ -610,7 +610,9 @@ task generateMinimipsTemplates(type: JavaExec) {
     '-gt',
     'minimips',
     '-btn',
-    'MiniMipsBaseTemplate'
+    'MiniMipsBaseTemplate',
+    '-btp',
+    'minimips_base',
   ]
 }
 
