[gradle] specify Java test src dirs
Signed-off-by: Sergey Smolov <smolov@ispras.ru>

--- a/build.gradle
+++ b/build.gradle
@@ -315,6 +315,9 @@ test {
 
 sourceSets {
   test {
+    java {
+      srcDirs = ['src/test/java/core','src/test/java/plugins/mmu']
+    }
     resources {
       srcDir "${project.projectDir}/build/classes/main"
     }
