X86: added simple_template2
Signed-off-by: Protsenko <protsenko@ispras.ru>

--- a/src/main/arch/demo/x86/templates/Makefile
+++ b/src/main/arch/demo/x86/templates/Makefile
@@ -6,7 +6,8 @@ TESTS = block\
         random\
         random_immediate\
         random_registers\
-        simple_template
+        simple_template\
+        simple_template2
 
 all: $(TESTS)
 
