testbaseVersion=0.0.21-alpha-SNAPSHOT
Signed-off-by: Andrei Tatarnikov <andrewt@ispras.ru>

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,6 @@ repoUrl=https://forge.ispras.ru/nexus/content/repositories/
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.41-beta-SNAPSHOT
 fortressVersion=0.4.31-beta-180504
-testbaseVersion=0.0.20-alpha-180504
+testbaseVersion=0.0.21-alpha-SNAPSHOT
 jsoftfloatVersion=1.0.5-beta-161221
 qemuVersion=0.2.2-beta-180713
