gradle.properties: testbase's build -> snapshot.
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.44-beta-SNAPSHOT
 fortressVersion=0.4.32-beta-180820
 castleVersion=0.1.1-beta-180820
-testbaseVersion=0.0.21-alpha-180719
+testbaseVersion=0.0.22-alpha-SNAPSHOT
 jsoftfloatVersion=1.0.5-beta-161221
 qemuVersion=0.2.2-beta-180713
