gradle: specify main src dirs
Some IDEs, like IntelliJ IDEA, build src dir
structure with the help of Gradle scripts. In case
when main src dirs aren't specified there, it sets
'src/main/java' dir as the sources root, that causes
compilation errors. The commit specifies src roots
explicitly.

Signed-off-by: Sergey Smolov <smolov@ispras.ru>

--- a/build.gradle
+++ b/build.gradle
@@ -315,6 +315,11 @@ test {
 }
 
 sourceSets {
+  main {
+    java {
+      srcDirs = ['src/main/java/core','src/main/java/plugins/mmu', 'build/generated-src/antlr/main']
+    }
+  }
   test {
     java {
       srcDirs = ['src/test/java/core','src/test/java/plugins/mmu']
