--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.44-beta-SNAPSHOT
 fortressVersion=0.4.32-beta-180820
 castleVersion=0.1.1-beta-180820
-testbaseVersion=0.0.22-alpha-SNAPSHOT
+testbaseVersion=0.0.22-alpha-181115
 jsoftfloatVersion=1.0.5-beta-161221
 qemuVersion=0.2.4-beta-181112
