--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ fortressVersion=0.4.32-beta-180820
 castleVersion=0.1.1-beta-180820
 testbaseVersion=0.0.23-alpha-181116
 jsoftfloatVersion=1.0.5-beta-161221
-qemuVersion=0.2.4-beta-181112
+qemuVersion=0.3.1-beta-SNAPSHOT
