AllocationData: read-after and write-after dependencies rates (unused).
Signed-off-by: Alexander Kamkin <kamkin@ispras.ru>

--- a/src/main/arch/demo/minimips/templates/Makefile
+++ b/src/main/arch/demo/minimips/templates/Makefile
@@ -47,6 +47,8 @@ TESTS = aligned_calls\
         random_sequence\
         random_situation\
         register_allocation\
+        register_allocation2\
+        register_allocation3\
         selfchecks\
         testdata
 
