--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ projectGroup=microtesk
 projectName=microtesk
 repoUrl=https://forge.ispras.ru/nexus/content/repositories/
 mainClassName=ru.ispras.microtesk.MicroTESK
-version=2.4.45-beta-190128
+version=2.4.46-beta-SNAPSHOT
 fortressVersion=0.4.32-beta-180820
 castleVersion=0.1.1-beta-180820
 testbaseVersion=0.0.23-alpha-181116
