[build] org.glassfish.javax.json dep
Signed-off-by: Artem Kotsynyak <kotsynyak@ispras.ru>

--- a/build.gradle
+++ b/build.gradle
@@ -166,6 +166,7 @@ dependencies {
   testRuntime cvc4
 
   antlr 'org.antlr:antlr:3.5.2'
+  compile 'org.glassfish:javax.json:1.1.2'
   compile 'commons-cli:commons-cli:1.2'
   compile 'commons-lang:commons-lang:2.4'
   compile 'org.jruby:jruby-complete:1.7.25'
