--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@ fortressVersion=0.4.32-beta-180820
 castleVersion=0.1.1-beta-180820
 testbaseVersion=0.0.24-alpha-SNAPSHOT
 jsoftfloatVersion=1.0.5-beta-161221
-qemuVersion=0.3.3-beta-SNAPSHOT
+qemuVersion=0.3.3-beta-191024
