--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.4.46-beta-SNAPSHOT
 fortressVersion=0.4.32-beta-180820
 castleVersion=0.1.1-beta-180820
-testbaseVersion=0.0.24-alpha-SNAPSHOT
+testbaseVersion=0.0.24-alpha-191025
 jsoftfloatVersion=1.0.5-beta-161221
 qemuVersion=0.3.3-beta-191024
