--- a/build.gradle
+++ b/build.gradle
@@ -362,12 +362,11 @@ checkstyleTest.source = "${project.projectDir}/src/test/java"
 
 pmd {
   ignoreFailures = true
-  ruleSets = [ "java-android,java-basic,java-braces,java-clone,java-codesize,java-controversial,"
-             + "java-coupling,java-design,java-empty,java-finalizers,java-imports,java-j2ee,"
-             + "java-javabeans,java-junit,java-logging-jakarta-commons,java-logging-java,"
+  ruleSets = [ "java-basic,java-braces,java-clone,java-codesize,java-coupling,java-design,"
+             + "java-empty,java-finalizers,java-imports,java-junit,java-logging-java,"
              + "java-migrating,java-migrating_to_13,java-migrating_to_14,java-migrating_to_15,"
-             + "java-migrating_to_junit4,java-naming,java-optimizations,java-strictexception,"
-             + "java-strings,java-sunsecure,java-typeresolution,java-unnecessary,java-unusedcode"]
+             + "java-migrating_to_junit4,java-optimizations,java-strictexception,java-strings,"
+             + "java-sunsecure,java-typeresolution,java-unnecessary,java-unusedcode"]
   ruleSetFiles = files("config/pmd/java/comments.xml")
 }
 
