--- a/build.gradle
+++ b/build.gradle
@@ -362,12 +362,18 @@ checkstyleTest.source = "${project.projectDir}/src/test/java"
 
 pmd {
   ignoreFailures = true
-  ruleSets = [ "java-basic,java-braces,java-clone,java-codesize,java-coupling,java-design,"
-             + "java-empty,java-finalizers,java-imports,java-junit,java-logging-java,"
-             + "java-migrating,java-migrating_to_13,java-migrating_to_14,java-migrating_to_15,"
-             + "java-migrating_to_junit4,java-optimizations,java-strictexception,java-strings,"
-             + "java-sunsecure,java-typeresolution,java-unnecessary,java-unusedcode"]
-  ruleSetFiles = files("config/pmd/java/comments.xml")
+  ruleSetFiles = files("config/pmd/java/basic.xml", "config/pmd/java/braces.xml",
+          "config/pmd/java/clone.xml", "config/pmd/java/codesize.xml",
+          "config/pmd/java/comments.xml", "config/pmd/java/design.xml",
+          "config/pmd/java/empty.xml", "config/pmd/java/finalizers.xml",
+          "config/pmd/java/imports.xml", "config/pmd/java/junit.xml",
+          "config/pmd/java/logging-java.xml", "config/pmd/java/migrating.xml",
+          "config/pmd/java/migrating_to_13.xml", "config/pmd/java/migrating_to_14.xml",
+          "config/pmd/java/migrating_to_15.xml", "config/pmd/java/naming.xml",
+          "config/pmd/java/migrating_to_junit4.xml", "config/pmd/java/strings.xml",
+          "config/pmd/java/optimizations.xml", "config/pmd/java/strictexception.xml",
+          "config/pmd/java/sunsecure.xml", "config/pmd/java/typeresolution.xml",
+          "config/pmd/java/unnecessary.xml", "config/pmd/java/unusedcode.xml")
 }
 
 jacoco {
