Writing a trace enabled

--- a/build.gradle
+++ b/build.gradle
@@ -179,6 +179,9 @@ dependencies {
   compile ("castle:castle:${castleVersion}") { changing = true }
   compile ("testbase:testbase:${testbaseVersion}") { changing = true }
   compile ("jsoftfloat:jsoftfloat:${jsoftfloatVersion}") { changing = true }
+
+  compile fileTree(dir: 'libs', include: '*.jar')
+
   qemu("qemu4v:qemu4v:${qemuVersion}:@tar.gz") { changing = true }
 
   // TODO: unused Aspectrace dependencies
