--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ repoUrl=https://forge.ispras.ru/nexus/content/repositories/
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.5.0-beta-SNAPSHOT
 fortressVersion=0.4.32-beta-180820
+aspectraceapiVersion=1.0.1-alpha-191122
 castleVersion=0.1.1-beta-180820
 testbaseVersion=0.0.24-alpha-191025
 jsoftfloatVersion=1.0.5-beta-161221
