gradle: fix deprecated features
Signed-off-by: Sergey Smolov <smolov@ispras.ru>

--- a/build.gradle
+++ b/build.gradle
@@ -110,7 +110,7 @@ static String getCurrentDateString()  {
   new SimpleDateFormat( "yyMMdd" ).format( new Date() )
 }
 
-task unSnapshotVersion.doLast {
+unSnapshotVersion.doLast {
   def version = project.version.toString()
   version += '-' + getCurrentDateString()
    project.plugins.getPlugin( net.researchgate.release.ReleasePlugin.class )
