--- a/build.gradle
+++ b/build.gradle
@@ -160,7 +160,7 @@ configurations.all {
 }
 
 dependencies {
-  testCompile 'junit:junit:4.11'
+  testImplementation 'junit:junit:4.12'
   testCompile 'hamcrest:hamcrest-core:1.3'
   testRuntime z3
   testRuntime cvc4
