--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.5.1-beta-SNAPSHOT
 fortressVersion=0.4.32-beta-180820
 aspectraceapiVersion=1.0.1-alpha-191122
-castleVersion=0.1.1-beta-180820
+castleVersion=0.1.4-beta-SNAPSHOT
 testbaseVersion=0.0.24-alpha-191025
 jsoftfloatVersion=1.0.5-beta-161221
 qemuVersion=0.3.4-beta-191226
