--- a/gradle.properties
+++ b/gradle.properties
@@ -9,4 +9,4 @@ aspectraceapiVersion=1.0.1-alpha-191122
 castleVersion=0.1.4-beta-200127
 testbaseVersion=0.0.24-alpha-191025
 jsoftfloatVersion=1.0.5-beta-161221
-qemuVersion=0.3.5-beta-200116
+qemuVersion=0.3.6-beta-SNAPSHOT
