--- a/src/main/arch/demo/x86/model/Makefile
+++ b/src/main/arch/demo/x86/model/Makefile
@@ -1,4 +1,4 @@
 ARCH=x86
 
 all:
-	sh $(MICROTESK_HOME)/bin/compile.sh $(ARCH).nml -ri X86_GNU
+	sh $(MICROTESK_HOME)/bin/compile.sh $(ARCH).nml -ri I80386
